@@ -3,20 +3,20 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.24")
+    classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.34")
   }
 }
 
 plugins {
   id 'application'
   id 'checkstyle'
-  id 'com.github.ben-manes.versions' version '0.39.0'
-  id 'info.solidsoft.pitest' version '1.6.0'
+  id 'com.github.ben-manes.versions' version '0.42.0'
+  id 'info.solidsoft.pitest' version '1.7.4'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'jacoco'
   id 'org.owasp.dependencycheck' version '6.2.2'
   id 'org.sonarqube' version '3.3'
-  id 'org.springframework.boot' version '2.6.2'
+  id 'org.springframework.boot' version '2.6.7'
   id 'au.com.dius.pact' version '4.2.6'
 }
 
@@ -31,18 +31,20 @@ def versions = [
   dumbster                     : '1.7.1',
   //feignHttpClient              : '10.3.0',
   googleAuth                   : '1.5.0',
+  gradlePitest                 : '1.4.5',
   guava                        : '30.1-jre',
   hmctsNotify                  : '3.14.1-RELEASE',
   //  idamClient                   : '1.3.0',
   httpComponents               : '4.5.13',
-  jackson                      : '2.12.3',
-  jacksonDatatypeJsr           : '2.12.3',
+  jackson                      : '2.13.3',
+  jacksonDatatypeJsr           : '2.13.0',
   jsonAssert                   : '1.2.3',
   //  jsonPathAssert               : '2.2.0',
   junit                        : '4.13.1',
   junitPlatform                : '5.7.2',
-  lombok                       : '1.18.20',
+  lombok                       : '1.18.22',
   pact                         : '4.1.11',
+  pitest                       : '1.7.3',
   puppyCrawl                   : '8.43',
   reformPropertiesVolume       : '0.0.4',
   reformsJavaLogging           : '5.1.7',
@@ -50,14 +52,17 @@ def versions = [
   serenity                     : '2.3.10',
   serenityCucumber             : '1.9.50',
   serviceTokenGenerator        : '3.1.1',
+  sonarPitest                  : '0.5',
   springfoxSwagger             : '3.0.0',
   springSecurityCrypto         : '5.4.5',
   springSecurityRsa            : '1.0.9.RELEASE',
   springBoot                   : '2.5.4',
   springCloud                  : '3.0.3',
-  tomcat                       : '9.0.54',
-  unirest                      : '1.4.9'
+  tomcat                       : '9.0.63',
+  unirest                      : '1.4.9',
+  ccdCaseDocumentAmClient      : '1.7.3'
 ]
+ext["logback.version"] = '1.2.11'
 
 allprojects {
 
@@ -124,7 +129,7 @@ allprojects {
       }
 
       // solves CVE-2014-3488, CVE-2015-2156, CVE-2019-16869, CVE-2021-21409
-      dependencySet(group: 'io.netty', version: '4.1.71.Final') {
+      dependencySet(group: 'io.netty', version: '4.1.75.Final') {
         entry 'netty-buffer'
         entry 'netty-codec'
         entry 'netty-codec-http'
@@ -142,7 +147,8 @@ allprojects {
         entry 'tomcat-embed-el'
       }
       //CVE-2017-18640
-      dependency group: 'org.yaml',name: 'snakeyaml', version: '1.26'
+      dependency group: 'org.yaml',name: 'snakeyaml', version: '1.30'
+
     }
   }
 }
@@ -202,9 +208,27 @@ sourceSets {
     }
     resources.srcDir file('src/contractTest/resources')
   }
+  functionalTest {
+    java {
+      compileClasspath += main.output
+      runtimeClasspath += main.output
+      srcDir file('src/functionalTest/java')
+    }
+    resources.srcDir file('src/functionalTest/resources')
+  }
+  smokeTest {
+    java {
+      compileClasspath += main.output + test.output
+      runtimeClasspath += main.output + test.output
+      srcDir file('src/smokeTest/java')
+    }
+    resources.srcDir file('src/smokeTest/resources')
+  }
 }
 
 configurations {
+  functionalTestImplementation.extendsFrom testImplementation
+  functionalTestRuntime.extendsFrom testRuntime
   integrationTestImplementation.extendsFrom testImplementation
   integrationTestRuntime.extendsFrom testRuntime
 }
@@ -224,6 +248,12 @@ dependencyCheck {
 
 dependencies {
 
+  implementation 'org.testng:testng:7.5'
+  implementation 'org.testng:testng:7.5'
+  implementation 'org.testng:testng:7.5'
+  implementation 'org.testng:testng:7.5'
+  implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+  implementation 'org.junit.jupiter:junit-jupiter:5.8.2'
   annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
   compileOnly("org.projectlombok:lombok:${versions.lombok}")
   testCompileOnly("org.projectlombok:lombok:${versions.lombok}")
@@ -239,10 +269,10 @@ dependencies {
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
   implementation group: 'io.springfox', name: 'springfox-spring-webflux', version: versions.springfoxSwagger
-  implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.0'
+  implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.1.0'
   implementation group: 'org.apache.commons', name: 'commons-lang3', version: versions.commonsLang3
   implementation group: 'org.apache.commons', name: 'commons-math3', version: versions.commonsMath3
-  implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.14'
+  implementation group: 'org.springframework', name: 'spring-context-support', version: '5.3.20'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
@@ -254,8 +284,8 @@ dependencies {
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformsJavaLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-httpcomponents', version: versions.reformsJavaLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-spring', version: versions.reformsJavaLogging
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.15.0'
-  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.15.0'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.2'
+  implementation group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.17.2'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: versions.reformPropertiesVolume
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceTokenGenerator
   implementation group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: versions.sendLetterClient
@@ -265,7 +295,15 @@ dependencies {
   implementation group: 'uk.gov.service.notify', name: 'notifications-java-client', version: versions.hmctsNotify
   implementation group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'idam-client', version: '2.0.0'
+  implementation group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '3.0.3'
+  implementation group: 'com.github.hmcts', name:'ccd-case-document-am-client', version: versions.ccdCaseDocumentAmClient
 
+  compile group: 'uk.gov.hmcts.reform', name: 'send-letter-client', version: '2.2.0'
+  compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.7.1'
+  compile group: 'javax.json', name: 'javax.json-api', version: '1.1.4'
+  compile group: 'org.glassfish', name: 'javax.json', version: '1.1.4'
+  compile group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
+  compile group: 'com.sendgrid', name: 'sendgrid-java', version: '4.0.1'
   implementation group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
   implementation group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '4.0.0'
 //  //implementation group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
@@ -273,7 +311,7 @@ dependencies {
   implementation group: 'org.springframework.security', name: 'spring-security-web'
 //  implementation group: 'org.springframework.security', name: 'spring-security-config'
 //  // CVE-2021-22112 - Privilege Escalation
-  implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.5.2'
+  implementation group: 'org.springframework.security', name: 'spring-security-core', version: '5.6.2'
 //  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client'
 //  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server'
 
@@ -320,6 +358,18 @@ dependencies {
     exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
   }
 
+  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '4.5.1'
+  testImplementation group: 'io.rest-assured', name: 'json-path', version: '4.5.1'
+  testImplementation group: 'io.rest-assured', name: 'xml-path', version: '4.5.1'
+  testImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-cucumber', version: versions.serenityCucumber
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  testImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+
+
+
   // integration test
   integrationTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
   integrationTestImplementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: versions.jacksonDatatypeJsr
@@ -351,6 +401,20 @@ dependencies {
       exclude group: 'io.reactivex', module: 'rxnetty-servo'
     }
 
+  // functionTest Implementation
+  functionalTestImplementation sourceSets.main.runtimeClasspath
+  functionalTestImplementation sourceSets.test.runtimeClasspath
+  functionalTestAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  functionalTestImplementation group: 'org.springframework', name: 'spring-context-support'
+  functionalTestImplementation group: 'org.projectlombok', name: 'lombok', version: versions.lombok
+  functionalTestImplementation (group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: versions.serviceTokenGenerator)
+    {
+      exclude group: 'io.reactivex', module: 'io.reactivex'
+      exclude group: 'io.reactivex', module: 'rxnetty'
+      exclude group: 'io.reactivex', module: 'rxnetty-contexts'
+      exclude group: 'io.reactivex', module: 'rxnetty-servo'
+    }
+
   contractTestCompile group: 'com.google.guava', name: 'guava', version: versions.guava
   contractTestCompile group: 'au.com.dius.pact.consumer', name: 'junit5', version: versions.pact
   contractTestCompile group: 'au.com.dius.pact.consumer', name: 'java8', version: versions.pact
@@ -360,7 +424,7 @@ dependencies {
 
   contractTestCompile group: 'org.apache.httpcomponents', name: 'httpclient', version: versions.httpComponents
 
-  compile 'org.junit.vintage:junit-vintage-engine:5.7.2'
+  compile 'org.junit.vintage:junit-vintage-engine:5.8.2'
   testRuntimeOnly "org.junit.platform:junit-platform-commons:1.8.2"
 
 
@@ -372,20 +436,44 @@ dependencies {
   contractTestCompile sourceSets.main.runtimeClasspath
   contractTestCompile sourceSets.test.runtimeClasspath
 
+  smokeTestCompile sourceSets.main.runtimeClasspath
+  smokeTestCompile sourceSets.test.runtimeClasspath
+
+
   integrationTestImplementation(sourceSets.test.output)
+  testCompile 'com.github.hmcts:fortify-client:1.2.2:all'
+
+  compile group: 'org.pitest', name: 'pitest', version: versions.pitest
+  compile group:'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
+  compile group:'org.codehaus.sonar-plugins', name:'sonar-pitest-plugin', version: versions.sonarPitest
+}
+
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verification') {
-  useJUnit {
-    includeCategories 'uk.gov.hmcts.reform.prl.category.SmokeTest'
-  }
+  useJUnitPlatform()
+
+  setTestClassesDirs(sourceSets.smokeTest.output.classesDirs)
+  setClasspath(sourceSets.smokeTest.runtimeClasspath)
+
+}
+
+task integration(type: Test, description: 'Runs integration tests.', group: 'Verification') {
+  useJUnitPlatform()
+
+  setTestClassesDirs(sourceSets.integrationTest.output.classesDirs)
+  setClasspath(sourceSets.integrationTest.runtimeClasspath)
 }
 
 task functional(type: Test, description: 'Runs functional tests.', group: 'Verification') {
   useJUnitPlatform()
 
-  setTestClassesDirs(sourceSets.integrationTest.output.classesDirs)
-  setClasspath(sourceSets.integrationTest.runtimeClasspath)
+  setTestClassesDirs(sourceSets.functionalTest.output.classesDirs)
+  setClasspath(sourceSets.functionalTest.runtimeClasspath)
 }
 
 task nightlyFunctional(type: Test, description: 'Runs the Nightly Only Functional tests.', group: 'Verification') {
@@ -403,14 +491,17 @@ task nightlyFunctional(type: Test, description: 'Runs the Nightly Only Functiona
 }
 
 pitest {
-  targetClasses = ['uk.gov.hmcts.reform.divorce.prl.*']
+  targetClasses = ['uk.gov.hmcts.reform.prl.*']
   excludedClasses = [
-    'uk.gov.hmcts.reform.divorce.prl.config.*',
-    'uk.gov.hmcts.reform.divorce.prl.models.*',
+    'uk.gov.hmcts.reform.prl.config.*',
+    'uk.gov.hmcts.reform.prl.models.*',
+    'uk.gov.hmcts.reform.prl.enums.*',
+    'uk.gov.hmcts.reform.prl.Application.*',
+    'uk.gov.hmcts.reform.prl.utils.ElementUtils.*',
   ]
   threads = 10
   outputFormats = ['XML', 'HTML']
-  timestampedReports = false
+  timestampedReports = true
   mutationThreshold = 80
 }
 
@@ -440,10 +531,8 @@ def sonarExclusions = [
   '**uk/gov/hmcts/reform/prl/models/**/*',\
   '**uk/gov/hmcts/reform/prl/enums/*',
   '**uk/gov/hmcts/reform/prl/config/**/*',
-  '**uk/gov/hmcts/reform/prl/utils/SslVerificationDisabler.*',
   '**uk/gov/hmcts/reform/prl/Application.*',
-  '**uk/gov/hmcts/reform/prl/services/validators/*.*'
-
+  '**uk/gov/hmcts/reform/prl/utils/ElementUtils.java'
 ]
 
 sonarqube {
